# TMAM

./: LICENSE  README.md  TMAM.py  TMAM_cholec_train.py  TMAM_train.py  calc_score.py  calc_score_cholec.py  cholec_split.py  create_video.py  pyproject.toml  train.py  train_cholec.py  valid.py  valid_cholec.py
base_model/: alt_model.py  models_2d.py
tmp_cst/: analyze_tc_scores.py  eval_tc.py  eval_tc_cholec.py  eval_tc_cholec_submit.sh  eval_tc_submit.sh
util/: converter.py  converter2.py  data.py  model.py  vis.py
